--- a/dotconfig/waybar/config
+++ b/dotconfig/waybar/config
@@ -14,6 +14,10 @@
     "clock",
     "custom/power"
   ],
+  "hyprland/window": {
+    "format": "{title}",
+    "max-length": 50,
+  },
   "hyprland/workspaces": {
     "format": "{icon}{windows}",
     "format-icons": {
